# plonky2-whir-verifier

./: .gitignore  Cargo.toml  README.md
contracts/: foundry.toml
contracts/contracts/test/data/: test_constraint_data.json
contracts/src/: GoldilocksField.sol  Plonky2Verifier.sol  PoseidonConstants.sol  PoseidonGateEval.sol  PoseidonHash.sol  WhirPlonky2Verifier.sol
contracts/src/spongefish/: GoldilocksExt3.sol  SpongefishWhirVerify.sol  SumcheckBridgeVerifier.sol  WhirLinearAlgebra.sol
contracts/test/: GenericE2E.t.sol  GoldilocksField.t.sol  Plonky2Verifier.t.sol  PoseidonGateEval.t.sol  SpongefishWhir.t.sol  WhirOnchainE2E.t.sol
contracts/test/data/: test_constraint_data.json  wrapper_constraint_data.json
contracts/test/data/whir/: intmax3_e2e_whir_fixture.json  intmax3_whir_fixture.json  test_combined_verifier_data.json  test_whir_proof.json  wrapper_combined_verifier_data.json  wrapper_constants_sigmas_verifier_data.json  wrapper_quotient_polys_verifier_data.json  wrapper_whir_proof.json  (+2 more)
docs/: constraint-verification-architecture.md  cryptographic-construction.md
soundnessgame/: DuplexSponge.vol.md  GoldilocksExt3.vol.md  GoldilocksField.vol.md  Keccak256Chain.vol.md  Plonky2Verifier.vol.md  PoseidonConstants.vol.md  PoseidonGateEval.vol.md  SpongefishMerkle.vol.md  SpongefishWhir.vol.md  SpongefishWhirVerify.vol.md  WhirLinearAlgebra.vol.md
src/: error.rs  lib.rs  prover.rs  sumcheck.rs  wrapper.rs
tasks/: todo.md
tests/: whir_onchain_e2e.rs
tests/fixtures/: whir_constraint_data.json  whir_openings.json  whir_verifier_data.json
(+2 files in other folders)
