[package]
name = "plonky2-whir-verifier"
version = "0.1.0"
edition = "2021"
description = "Generic plonky2 → WHIR post-quantum verification pipeline"

[dependencies]
plonky2 = { git = "https://github.com/InternetMaximalism/polygon-plonky2.git", branch = "wasm", default-features = false, features = ["parallel"] }
# Pinned to df0470f: latest (5d694bb) has blake3/digest incompatibility
whir = { git = "https://github.com/leohio/whir", rev = "df0470f", features = ["parallel"], optional = true }
ark-ff = { version = "0.5", features = ["asm", "std"], optional = true }
ark-std = { version = "0.5", features = ["std"], optional = true }
sha3 = { version = "0.10", optional = true }
ciborium = { version = "0.2", optional = true }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
num-bigint = "0.4"
thiserror = "2"

[[bin]]
name = "generate_fixture"
required-features = ["whir"]

[features]
default = ["whir"]
whir = ["dep:whir", "dep:ark-ff", "dep:ark-std", "dep:sha3", "dep:ciborium"]
